k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdsl-exchange-api-service
  namespace: default
  labels:
    app.kubernetes.io/name: gdsl-exchange-api
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: gdsl-exchange-api
    app.kubernetes.io/component: backend
